force-app/main/default/objects/Quote/fields/ADV__c.field-meta.xml
<CustomField>
    <fullName>ADV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADV</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>