force-app/main/default/objects/Quote/fields/ADV_Email__c.field-meta.xml
<CustomField>
    <fullName>ADV_Email__c</fullName>
    <label>ADV Email</label>
    <type>Email</type>
</CustomField>