force-app/main/default/objects/Quote/fields/ADV_Ville__c.field-meta.xml
<CustomField>
    <fullName>ADV_Ville__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADV Ville</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>