force-app/main/default/objects/Quote/fields/CDV__c.field-meta.xml
<CustomField>
    <fullName>CDV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CDV</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes3</relationshipName>
    <type>Lookup</type>
</CustomField>