force-app/main/default/objects/Quote/fields/CDV_Email__c.field-meta.xml
<CustomField>
    <fullName>CDV_Email__c</fullName>
    <label>CDV Email</label>
    <type>Email</type>
</CustomField>