force-app/main/default/objects/Quote/fields/Chef_de_service_ordering__c.field-meta.xml
<CustomField>
    <fullName>Chef_de_service_ordering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chef de service ordering</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes7</relationshipName>
    <type>Lookup</type>
</CustomField>