force-app/main/default/objects/Quote/fields/Date_d_approbation_de_bon_de_commande__c.field-meta.xml
<CustomField>
    <fullName>Date_d_approbation_de_bon_de_commande__c</fullName>
    <label>Date d&apos;approbation de bon de commande</label>
    <type>DateTime</type>
</CustomField>