force-app/main/default/objects/Quote/fields/Date_de_derniere_soumission__c.field-meta.xml
<CustomField>
    <fullName>Date_de_derniere_soumission__c</fullName>
    <label>Date de derniere soumission</label>
    <type>DateTime</type>
</CustomField>