force-app/main/default/objects/Quote/fields/Directeur_Commercial__c.field-meta.xml
<CustomField>
    <fullName>Directeur_Commercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Directeur Commercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes8</relationshipName>
    <type>Lookup</type>
</CustomField>