force-app/main/default/objects/Quote/fields/DS__c.field-meta.xml
<CustomField>
    <fullName>DS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes4</relationshipName>
    <type>Lookup</type>
</CustomField>