force-app/main/default/objects/Quote/fields/DS_Email__c.field-meta.xml
<CustomField>
    <fullName>DS_Email__c</fullName>
    <label>DS Email</label>
    <type>Email</type>
</CustomField>