force-app/main/default/objects/Quote/fields/Is_Users_notified__c.field-meta.xml
<CustomField>
    <fullName>Is_Users_notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Users notified</label>
    <type>Checkbox</type>
</CustomField>