force-app/main/default/objects/Quote/fields/Motif_d_annulation__c.field-meta.xml
<CustomField>
    <fullName>Motif_d_annulation__c</fullName>
    <label>Motif d&apos;annulation</label>
    <type>TextArea</type>
</CustomField>