force-app/main/default/objects/Quote/fields/Motif_d_annulation_picklist__c.field-meta.xml
<CustomField>
    <fullName>Motif_d_annulation_picklist__c</fullName>
    <label>Motif d&apos;annulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>motif_d_annulation</valueSetName>
    </valueSet>
</CustomField>