force-app/main/default/objects/Quote/fields/National__c.field-meta.xml
<CustomField>
    <fullName>National__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADV National</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>