force-app/main/default/objects/Quote/fields/National_Email__c.field-meta.xml
<CustomField>
    <fullName>National_Email__c</fullName>
    <label>National Email</label>
    <type>Email</type>
</CustomField>