force-app/main/default/objects/Quote/fields/number_of_QuoteDocument__c.field-meta.xml
<CustomField>
    <fullName>number_of_QuoteDocument__c</fullName>
    <defaultValue>0</defaultValue>
    <label>number of QuoteDocument</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>