force-app/main/default/objects/Quote/fields/Responsable_Achat_VO__c.field-meta.xml
<CustomField>
    <fullName>Responsable_Achat_VO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Achat VO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes6</relationshipName>
    <type>Lookup</type>
</CustomField>