force-app/main/default/objects/Quote/fields/Status_d_annulation__c.field-meta.xml
<CustomField>
    <fullName>Status_d_annulation__c</fullName>
    <label>Status d&apos;annulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours d&apos;approbation</fullName>
            </value>
            <value>
                <fullName>Approuvé</fullName>
            </value>
            <value>
                <fullName>Rejeté</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>