force-app/main/default/objects/Quote/fields/Tech_rejeter_VO__c.field-meta.xml
<CustomField>
    <fullName>Tech_rejeter_VO__c</fullName>
    <formula>Opportunity.Prix_de_vente_CEM__c &lt; prix_plancher_VO_SEMIA_TTC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech rejeter VO</label>
    <type>Checkbox</type>
</CustomField>