force-app/main/default/objects/Quote/fields/Tech_Type__c.field-meta.xml
<CustomField>
    <fullName>Tech_Type__c</fullName>
    <label>Tech Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>