force-app/main/default/objects/Quote/recordTypes/Bon_de_commande.recordType-meta.xml
<RecordType>
    <fullName>Bon_de_commande</fullName>
    <active>true</active>
    <label>Bon de commande</label>
</RecordType>