force-app/main/default/objects/Quote/recordTypes/Proforma.recordType-meta.xml
<RecordType>
    <fullName>Proforma</fullName>
    <active>true</active>
    <label>Proforma</label>
</RecordType>